Fix landing iphone video alignment

--- a/client/src/styles/landingPage.css
+++ b/client/src/styles/landingPage.css
@@ -13,7 +13,8 @@
 
 .landing_iphone_video {
   position: absolute;
-  top: 59px;
+  top: 60px;
+  left: 287px;
 }
 
 .landing_nexus {
